// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnderlineNav.Link renders the given "is" prop 1`] = `
.c0 {
  padding: 16px 8px;
  margin-right: 16px;
  font-size: 14px;
  line-height: 1.5;
  color: #586069;
  text-align: center;
  border-bottom: 2px solid transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  color: #24292e;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom-color: #d1d5da;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.c0:hover .UnderlineNav-octicon,
.c0:focus .UnderlineNav-octicon {
  color: #6a737d;
}

.c0.selected {
  font-weight: 600;
  color: #24292e;
  border-bottom-color: #e36209;
}

.c0.selected .UnderlineNav-octicon {
  color: #6a737d;
}

<b
  className="UnderlineNav-item c0"
/>
`;

exports[`UnderlineNav.Link respects the "selected" prop 1`] = `
.c0 {
  padding: 16px 8px;
  margin-right: 16px;
  font-size: 14px;
  line-height: 1.5;
  color: #586069;
  text-align: center;
  border-bottom: 2px solid transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  color: #24292e;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom-color: #d1d5da;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.c0:hover .UnderlineNav-octicon,
.c0:focus .UnderlineNav-octicon {
  color: #6a737d;
}

.c0.selected {
  font-weight: 600;
  color: #24292e;
  border-bottom-color: #e36209;
}

.c0.selected .UnderlineNav-octicon {
  color: #6a737d;
}

<a
  className="UnderlineNav-item selected c0"
/>
`;
